--- a/ScrapySharp.Tests/ScrapySharp.Tests.csproj
+++ b/ScrapySharp.Tests/ScrapySharp.Tests.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="When_parses_using_CssSelector.cs" />
-    <Compile Include="When_use_cookies.cs" />
+    <Compile Include="When_use_browser.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Html\Page1.htm">
