--- a/ScrapySharp/ScrapySharp.csproj
+++ b/ScrapySharp/ScrapySharp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Network\HttpVerb.cs" />
     <Compile Include="Network\ScrapingBrowser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\UrlUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
