--- a/ScrapySharp/ScrapySharp.csproj
+++ b/ScrapySharp/ScrapySharp.csproj
@@ -53,10 +53,13 @@
     <Compile Include="Extensions\NodeValueComparison.cs" />
     <Compile Include="Extensions\TokenHelper.cs" />
     <Compile Include="Extensions\UrlHelper.cs" />
+    <Compile Include="Html\Dom\DeclarationType.cs" />
+    <Compile Include="Html\Dom\HElement.cs" />
     <Compile Include="Html\Parsing\CodeReader.cs" />
     <Compile Include="Html\Parsing\CodeReadingContext.cs" />
     <Compile Include="Html\Parsing\HtmlDeclarationReader.cs" />
     <Compile Include="Html\Dom\TagDeclaration.cs" />
+    <Compile Include="Html\Parsing\HtmlDomBuilder.cs" />
     <Compile Include="Html\Parsing\Tokens.cs" />
     <Compile Include="Html\Parsing\Word.cs" />
     <Compile Include="Network\FakeUserAgent.cs" />
