--- a/ScrapySharp.Tests/ScrapySharp.Tests.csproj
+++ b/ScrapySharp.Tests/ScrapySharp.Tests.csproj
@@ -59,6 +59,9 @@
     <Compile Include="When_build_HtmlDom.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Html\ValidPage1.htm">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Html\InvalidPage1.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
