--- a/ScrapySharp.Tests/ScrapySharp.Tests.csproj
+++ b/ScrapySharp.Tests/ScrapySharp.Tests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="When_parses_using_CssSelector.cs" />
+    <Compile Include="When_parse_real_html_pages.cs" />
     <Compile Include="When_use_browser.cs" />
     <Compile Include="When_use_code_reader.cs" />
     <Compile Include="When_use_HtmlDeclarationReader.cs" />
