--- a/ScrapySharp.Tests/ScrapySharp.Tests.csproj
+++ b/ScrapySharp.Tests/ScrapySharp.Tests.csproj
@@ -61,6 +61,12 @@
     <Compile Include="When_build_HtmlDom.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Html\InvalidPage2.htm">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Html\ValidPage2.htm">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Html\ValidPage1.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
