--- a/ScrapySharp.Tests/ScrapySharp.Tests.csproj
+++ b/ScrapySharp.Tests/ScrapySharp.Tests.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="When_generate_HTML_with_HDocument.cs" />
     <Compile Include="When_parses_using_CssSelector.cs" />
     <Compile Include="When_parses_using_CssSelector_with_HDocument.cs" />
     <Compile Include="When_parse_real_html_pages.cs" />
