--- a/ScrapySharp/packages/repositories.config
+++ b/ScrapySharp/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\packages.config" />
+  <repository path="..\..\ScrapySharp.Core\packages.config" />
   <repository path="..\..\ScrapySharp.Tests\packages.config" />
+  <repository path="..\packages.config" />
 </repositories>
