--- a/ScrapySharp.Tests/ScrapySharp.Tests.csproj
+++ b/ScrapySharp.Tests/ScrapySharp.Tests.csproj
@@ -64,8 +64,12 @@
     <Compile Include="When_use_code_reader.cs" />
     <Compile Include="When_use_HtmlDeclarationReader.cs" />
     <Compile Include="When_build_HtmlDom.cs" />
+    <Compile Include="When_use_web_forms.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Html\WebFormPage.htm">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Html\GeneratedHtml1.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
