--- a/ScrapySharp.Core/ScrapySharp.Core.fsproj
+++ b/ScrapySharp.Core/ScrapySharp.Core.fsproj
@@ -44,6 +44,7 @@
     <Compile Include="CssSelectorTokenizer.fs" />
     <Compile Include="CssSelectorExecutor.fs" />
     <None Include="packages.config" />
+    <Compile Include="NavigationProvider.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack">
