--- a/ScrapySharp/ScrapySharp.csproj
+++ b/ScrapySharp/ScrapySharp.csproj
@@ -70,9 +70,12 @@
     <Compile Include="Html\Dom\HElement.cs" />
     <Compile Include="Html\Dom\HtmlLinqExtensions.cs" />
     <Compile Include="Html\Forms\AgilityFormParser.cs" />
+    <Compile Include="Html\Forms\AgilityNodeParser.cs" />
     <Compile Include="Html\Forms\FormField.cs" />
     <Compile Include="Html\Forms\HDocumentFormParser.cs" />
     <Compile Include="Html\Forms\HElementFormParser.cs" />
+    <Compile Include="Html\Forms\HElementNodeParser.cs" />
+    <Compile Include="Html\Forms\IHtmlNodeParser.cs" />
     <Compile Include="Html\Forms\WebForm.cs" />
     <Compile Include="Html\Parsing\CodeReader.cs" />
     <Compile Include="Html\Parsing\CodeReadingContext.cs" />
