--- a/ScrapySharp.Benchmarks/ScrapySharp.Benchmarks.csproj
+++ b/ScrapySharp.Benchmarks/ScrapySharp.Benchmarks.csproj
@@ -54,19 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack">
-      <HintPath>..\ScrapySharp\packages\HtmlAgilityPack.1.4.6\lib\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="HtmlAgilityPack">
-      <HintPath>..\ScrapySharp\packages\HtmlAgilityPack.1.4.3\lib\HtmlAgilityPack.dll</HintPath>
+      <HintPath>..\ScrapySharp\packages\HtmlAgilityPack.1.4.6\lib\Net40\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -78,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgilityPackBenchMark.cs" />
+    <Compile Include="BenchMarksParameters.cs" />
     <Compile Include="HDocumentBenchMark.cs" />
     <Compile Include="IBenchMark.cs" />
     <Compile Include="Program.cs" />
@@ -96,9 +85,12 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ScrapySharp\ScrapySharp.csproj">
-      <Project>{19858AEA-E842-4633-AF1B-110ED4FE3770}</Project>
+      <Project>{19858aea-e842-4633-af1b-110ed4fe3770}</Project>
       <Name>ScrapySharp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
