Begin to optimize HTML parser

--- a/ScrapySharp/ScrapySharp.csproj
+++ b/ScrapySharp/ScrapySharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Extensions\TokenHelper.cs" />
     <Compile Include="Extensions\UrlHelper.cs" />
     <Compile Include="Html\Dom\DeclarationType.cs" />
+    <Compile Include="Html\Dom\HAttibutesCollection.cs" />
     <Compile Include="Html\Dom\HAttribute.cs" />
     <Compile Include="Html\Dom\HComment.cs" />
     <Compile Include="Html\Dom\HContainer.cs" />
