--- a/ScrapySharp.Benchmarks/ScrapySharp.Benchmarks.csproj
+++ b/ScrapySharp.Benchmarks/ScrapySharp.Benchmarks.csproj
@@ -61,10 +61,6 @@
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\ScrapySharp\packages\HtmlAgilityPack.1.4.6\lib\Net40\HtmlAgilityPack.dll</HintPath>
     </Reference>
-    <Reference Include="ScrapySharp.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\ScrapySharp.Core\bin\Debug\ScrapySharp.Core.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -94,6 +90,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ScrapySharp.Core\ScrapySharp.Core.fsproj">
+      <Project>{ce27016b-2755-4b44-8a0e-574914b9256f}</Project>
+      <Name>ScrapySharp.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ScrapySharp\ScrapySharp.csproj">
       <Project>{19858aea-e842-4633-af1b-110ed4fe3770}</Project>
       <Name>ScrapySharp</Name>
