download webPages resources

--- a/ScrapySharp/packages.config
+++ b/ScrapySharp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.4.2" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40" />
+  <package id="protobuf-net" version="2.0.0.621" targetFramework="net40" />
 </packages>
