--- a/ScrapySharp.Tests/ScrapySharp.Tests.csproj
+++ b/ScrapySharp.Tests/ScrapySharp.Tests.csproj
@@ -67,6 +67,9 @@
     <Compile Include="When_use_web_forms.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Html\Form1.htm">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Html\WebFormPage.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
