--- a/ScrapySharp/packages/repositories.config
+++ b/ScrapySharp/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\ScrapySharp.Benchmarks\packages.config" />
   <repository path="..\..\ScrapySharp.Core\packages.config" />
+  <repository path="..\..\ScrapySharp.JavaScript\packages.config" />
   <repository path="..\..\ScrapySharp.Tests\packages.config" />
   <repository path="..\packages.config" />
 </repositories>
