--- a/ScrapySharp/ScrapySharp.nuspec
+++ b/ScrapySharp/ScrapySharp.nuspec
@@ -2,8 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>ScrapySharp</id>
-        <!--<version>$version$</version>-->
-        <version>2.0.50</version>
+        <version>2.2</version>
         <title>ScrapySharp</title>
         <authors>Romain Flechner</authors>
         <owners>Romain Flechner</owners>
@@ -14,11 +13,7 @@
 - a web client able to simulate a web browser.
 - an HtmlAgilityPack extension to select elements using css selector (like JQuery)</description>
         <summary>Scraping framework written in C#.</summary>
-        <releaseNotes>- Use a new CssSelector parser written in F#
-- Works with new version of HtmlAgilityPack
-- Fix some cookies parsing error
-- Fix a bug when we use descendant selector for direct children nodes
-- New Css selectors like JQuery</releaseNotes>
+        <releaseNotes>- Add some helpers to improve web browsing</releaseNotes>
         <copyright>Romain Flechner</copyright>
         <language>en-US</language>
         <tags>Scraping html css linq agility</tags>
