--- a/ScrapySharp.JavaScript/ScrapySharp.JavaScript.csproj
+++ b/ScrapySharp.JavaScript/ScrapySharp.JavaScript.csproj
@@ -46,6 +46,10 @@
     <Reference Include="Noesis.Javascript" Condition="'$(PlatformTarget)' == 'AnyCPU'">
       <HintPath>..\ScrapySharp\packages\Noesis.Javascript.0.7.1.0\lib\net40\x86\Noesis.Javascript.dll</HintPath>
     </Reference>
+    <Reference Include="smnetjs, Version=0.1.4.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\smnetjs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,12 +61,12 @@
   <ItemGroup>
     <Compile Include="Dom\Document.cs" />
     <Compile Include="Dom\DomElement.cs" />
+    <Compile Include="Dom\Script.cs" />
     <Compile Include="Dom\Window.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Program2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +84,18 @@
     </Content>
     <Content Include="EmbeddedScripts\jquery-1.9.1.min.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="mozjs185-1.0.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="nspr4.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="smnetjs.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="smnetjs.pdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
