try with google

--- a/ScrapySharp.JavaScript/ScrapySharp.JavaScript.csproj
+++ b/ScrapySharp.JavaScript/ScrapySharp.JavaScript.csproj
@@ -103,6 +103,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ScrapySharp\ScrapySharp.csproj">
+      <Project>{19858aea-e842-4633-af1b-110ed4fe3770}</Project>
+      <Name>ScrapySharp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <PropertyGroup>
