--- a/ScrapySharp/ScrapySharp.nuspec
+++ b/ScrapySharp/ScrapySharp.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>ScrapySharp</id>
-        <version>2.2</version>
+        <version>2.3</version>
         <title>ScrapySharp</title>
         <authors>Romain Flechner</authors>
         <owners>Romain Flechner</owners>
@@ -18,7 +18,8 @@
         <language>en-US</language>
         <tags>Scraping html css linq agility</tags>
         <dependencies>
-            <dependency id="HtmlAgilityPack" version="1.4.6" />
+            <dependency id="HtmlAgilityPack" version="1.4.9" />
+            <dependency id="FSharp.Core" version="4.0.0.1" />
         </dependencies>
         <frameworkAssemblies>
             <frameworkAssembly assemblyName="System" targetFramework=".NETFramework4.0" />
@@ -33,28 +34,15 @@
         </frameworkAssemblies>
     </metadata>
     <files>
-        <file src="bin\release\FSharp.Core.dll" target="lib\net40" />
-        <file src="bin\release\FSharp.Core.xml" target="lib\net40" />
-        <file src="bin\release\HtmlAgilityPack.dll" target="lib\net40" />
+        <!--<file src="bin\release\FSharp.Core.dll" target="lib\net40" />
+        <file src="bin\release\FSharp.Core.xml" target="lib\net40" />-->
+        <!--<file src="bin\release\HtmlAgilityPack.dll" target="lib\net40" />
         <file src="bin\release\HtmlAgilityPack.pdb" target="lib\net40" />
-        <file src="bin\release\HtmlAgilityPack.xml" target="lib\net40" />
+        <file src="bin\release\HtmlAgilityPack.xml" target="lib\net40" />-->
         <file src="bin\release\ScrapySharp.Core.dll" target="lib\net40" />
         <file src="bin\release\ScrapySharp.Core.pdb" target="lib\net40" />
         <file src="bin\release\ScrapySharp.Core.xml" target="lib\net40" />
         <file src="bin\release\ScrapySharp.dll" target="lib\net40" />
         <file src="bin\release\ScrapySharp.pdb" target="lib\net40" />
     </files>
-
-  <!--<files>
-    <file src="FSharp.Core.dll" target="lib\net40" />
-    <file src="FSharp.Core.xml" target="lib\net40" />
-    <file src="HtmlAgilityPack.dll" target="lib\net40" />
-    <file src="HtmlAgilityPack.pdb" target="lib\net40" />
-    <file src="HtmlAgilityPack.xml" target="lib\net40" />
-    <file src="ScrapySharp.Core.dll" target="lib\net40" />
-    <file src="ScrapySharp.Core.pdb" target="lib\net40" />
-    <file src="ScrapySharp.Core.xml" target="lib\net40" />
-    <file src="ScrapySharp.dll" target="lib\net40" />
-    <file src="ScrapySharp.pdb" target="lib\net40" />
-  </files>-->
 </package>
